[package]
name = "dots"
version = "0.1.0"
authors = ["Nathan Knowler <nathan@knowler.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.15"
toml = "0.5.6"
yansi = "0.5.0"
serde = "1.0.114"
serde_derive = "1.0.114"
git2 = "0.13.6"
